--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       <h3>bike</h3>
       <p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p>
     </div>
+     <div class="product" onclick="showDetails('product2')">
+      <img src="drass.jpg" alt="পাঞ্জাবি ২">
+      <h3>bike</h3>
+      <p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p>
+    </div>
   </div>
 <!--BACK BUTTON-->
   <div id="product-details" class="product-details">
