--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>ASSISTANT</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+  .logo{
+    display: flex;
+  }
+  .logo1{
+    width:135px;
+    height:82px;
+  }
+</style>
 <body>
-  
+  <header>
+    <div class="logo">
+      <img class="logo1" src="../Rohan-2025/assets/logo.png" alt="">
+      <div class="logo-one"><a href="">Home</a></div>
+      <div class="logo-two"><a href="">Shop</a></div>
+      <div class="logo-three"><a href="">About us</a></div>
+      <div class="logo-four"><a href="">cart  ($56)</a></div>
+    </div>
+  </header>
 </body>
 </html>
