--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     width:135px;
     height:82px;
   }
+  .title{
+    display: flex;
+    width:1140px;
+    height:461px;
+    border:2px solid red;
+   margin: auto;
+  }
+  .title-one{
+    width:570px;
+    height:299px;
+    border:2px solid red;
+  }
+  .title-two{
+    width:570px;
+    height:355px;
+    border:2px solid red;
+  }
 </style>
 <body>
   <header>
@@ -23,6 +40,10 @@
       <div class="logo-two"><a href="">Shop</a></div>
       <div class="logo-three"><a href="">About us</a></div>
       <div class="logo-four"><a href="">cart  ($56)</a></div>
+    </div>
+    <div class="title">
+      <div class="title-one">ALWAYS<span>FRESH FLOWERS</span><br>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </div>
+      <div class="title-two"><img class="" class="" src="../Rohan-2025/assets/hero-flower.png"> </div>
     </div>
   </header>
 </body>
