added tag commit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   .logo1{
     width:135px;
     height:82px;
+    margin-left:370px;
+  }
+  .one{
+    margin-left:810px;
   }
   .title{
     display: flex;
@@ -31,20 +35,45 @@
     height:355px;
     border:2px solid red;
   }
+  .product-card{
+    display: flex;
+  }
 </style>
 <body>
   <header>
     <div class="logo">
       <img class="logo1" src="../Rohan-2025/assets/logo.png" alt="">
-      <div class="logo-one"><a href="">Home</a></div>
-      <div class="logo-two"><a href="">Shop</a></div>
-      <div class="logo-three"><a href="">About us</a></div>
-      <div class="logo-four"><a href="">cart  ($56)</a></div>
+      <div class="one"><a href="">Home</a></div>
+      <div class="two"><a href="">Shop</a></div>
+      <div class="three"><a href="">About us</a></div>
+      <div class="four"><a href="">cart  ($56)</a></div>
     </div>
     <div class="title">
       <div class="title-one">ALWAYS<span>FRESH FLOWERS</span><br>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </div>
       <div class="title-two"><img class="" class="" src="../Rohan-2025/assets/hero-flower.png"> </div>
     </div>
+    <div class="product">
+       <div class="product-title"><span>Our</span>Plants<p class="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
+       <div class="product-card">
+        <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+          <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+            <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+              <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+               <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+                <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+       </div>
+    </div>
   </header>
+  <footer>
+    <div class="plants">
+      <img class="" src="../Rohan-2025/assets/flower-store.png">
+   <img class="" src="../Rohan-2025/assets/trusted-badge.png">
+<div clas="Lover"><p clas="">Flower & Plants Lover<br>
+Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p> </div>
+
+    </div>
+  </footer>
 </body>
 </html>
