--- a/index.html
+++ b/index.html
@@ -14,64 +14,189 @@
     width:135px;
     height:82px;
     margin-left:370px;
+    list-style: none;
   }
-  .one{
-    margin-left:810px;
+  .nav ul{
+    margin-top:40px;
+    display: flex;
+     gap: 1rem;  
+     margin-left:720px;     
+  }
+  .nav li{
+    list-style:none;
   }
   .title{
+   
     display: flex;
     width:1140px;
     height:461px;
-    border:2px solid red;
-   margin: auto;
+   
+   margin:150px auto;
   }
+  a {
+  text-decoration: none;
+}
+.one{
+  font-size:18px;
+  font-weight: bold;
+}
+.two{
+  color:#8987A1;
+  font-weight:57/64;
+}
+.three{
+  color:#8987A1;
+}
+.four{
+  color:#000000;
+}
   .title-one{
+  margin-top:160px;
     width:570px;
     height:299px;
-    border:2px solid red;
+   
   }
   .title-two{
+    margin-top:105px;
     width:570px;
-    height:355px;
-    border:2px solid red;
+   
+    
   }
   .product-card{
     display: flex;
+    flex-wrap: wrap;
+    gap:20px;
+  
+   
+  }
+  h1{
+    font-weight: bold;
+    font-size:45px;
+  }
+  .sei{
+    color:#E95A08;
+  }
+  .product{
+   margin: auto;
+    width:1140px;
+    height:1186.88px;
+   
+     text-align: center;
+  }
+  .pera{
+    font-size:22px;
+    color:#000000;
+  }
+  .From{
+    color:#000000;
+    font-size:22px;
+   
+  }
+  .Lily{
+    width:270px;
+    height:322.94px;
+    
+  }
+  button{
+    background-color:#E95A08;
+    color:#FFFFFF;
+    font-size:16px;
+    font-weight:bold;
+    width:270px;
+    height:50px;
+    margin-top:35px;
+    border:none;
+  }
+  .price{
+    color:#111111;
+    font-weight: bold;
+    font-size:22px;
+  }
+  p{
+    color:#111111;
+    font-size:22px;
+    font-size: medium;
+  }
+  .plants{
+    margin: auto;
+    margin-top:150px;
+    display: flex;
+    width:1140px;
+    height:597px;
+  
+  }
+  h2{
+    padding-left:13px;
+    color:000000;
+    font-weight: bold;
+    font-size:50px;
+  }
+  .Lover{
+    margin-top:60px;
+    margin-left:50px;
+    width:540px;
+    height:521px;
+   
+  }
+  .Lover ul{
+    color:#000000;
+    font-size:22px;
+  line-height:33px;
   }
 </style>
 <body>
   <header>
     <div class="logo">
       <img class="logo1" src="../Rohan-2025/assets/logo.png" alt="">
-      <div class="one"><a href="">Home</a></div>
-      <div class="two"><a href="">Shop</a></div>
-      <div class="three"><a href="">About us</a></div>
-      <div class="four"><a href="">cart  ($56)</a></div>
+
+      <div class="nav">
+
+<ul>
+         <li><a class="one" href="">Home</a></li>
+          <li><a class="two" href="">Shop</a></li>
+           <li><a class="three" href="">About us</a></li>
+            <li> <a class="four" href="">cart  ($56)</a></li>
+
+      </ul>
+
+      </div>
     </div>
     <div class="title">
-      <div class="title-one">ALWAYS<span>FRESH FLOWERS</span><br>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </div>
+      <div class="title-one"><h1>ALWAYS <span class="sei">FRESH FLOWERS</span></h1><br><p class="pera">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p> </div>
       <div class="title-two"><img class="" class="" src="../Rohan-2025/assets/hero-flower.png"> </div>
     </div>
     <div class="product">
-       <div class="product-title"><span>Our</span>Plants<p class="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
+       <div class="product-title"><h1><span class="sei">Our</span>Plants</h1><p class="From">Indulge your senses with the beauty and fragrance of our fresh flower shop.<br> From classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
        <div class="product-card">
-        <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
-          <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
-            <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
-              <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
-               <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
-                <div class=""><img class="" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+<div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+  <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+   <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+          <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+            <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+              <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+               <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
+                <div class=""><img class="Lily" src="../Rohan-2025/assets/sample-flower-image.png" alt=""><p>Lily Blossom</p><div class="price">20 USD</div><button>ADD TO CART</button></div>
        </div>
     </div>
   </header>
   <footer>
     <div class="plants">
-      <img class="" src="../Rohan-2025/assets/flower-store.png">
-   <img class="" src="../Rohan-2025/assets/trusted-badge.png">
-<div clas="Lover"><p clas="">Flower & Plants Lover<br>
-Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
-Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
-Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p> </div>
+      <img class="flower" src="../Rohan-2025/assets/flower-store.png">
+   
+<div class="Lover"><p class=""><h2>Flower & Plants<br> Lover</h2><br>
+  <ul>
+    <li>
+      Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+    </li>
+    <li>
+      Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+    </li>
+    <li>
+      Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+    </li>
+  </ul>
+
+</p> </div>
 
     </div>
   </footer>
