--- a/index.html
+++ b/index.html
@@ -237,6 +237,52 @@ hr{
  
   color:#FFFFFF;
 }
+.imge-box11 {
+  
+  margin: auto;
+  position: relative;
+  width: fit-content; /* or a specific width */
+}
+
+.news {
+  margin-top:150px;
+  width:1140px;
+  height:533px;
+  display: block;
+}
+
+.overlay-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 20px;
+  color: white; /* Change as needed */
+}
+
+.overlay-content h6 {
+  font-weight: bold;
+  font-size:50px;
+  padding-left:250px;
+  padding-top:122px;
+}
+
+.overlay-content input {
+ margin-left:200px;
+  
+  width:644px;
+  height:50px;
+}
+
+.overlay-content button {
+  padding: 6px 12px;
+  background-color: #ff4081;
+  color: white;
+  border: none;
+  cursor: pointer;
+  height:55px;
+  width:179px;
+}
+
 </style>
 <body>
   <header>
@@ -326,6 +372,14 @@ Shop Now</h3>
         
       </div>
     </div>
+  </div>
+</div>
+<div class="imge-box11">
+  <img class="news" src="../Rohan-2025/assets/news-letter-bg.png" alt="">
+  <div class="overlay-content">
+    <h6>Join the colorful Bunch</h6>
+    <input type="text" placeholder="Write email">
+    <button>Subscribe</button>
   </div>
 </div>
 
