--- a/index.html
+++ b/index.html
@@ -282,6 +282,160 @@ hr{
   height:55px;
   width:179px;
 }
+.pera-sesh{
+ 
+  display: flex;
+  margin: auto;
+  width:1120px;
+  height:348px;
+ 
+}
+.joba{
+  width:400px;
+  height:300px;
+ 
+  margin-left:5%;
+  margin-top:15px;
+}
+.joba-title2{
+  margin-left:5%;
+  line-height:50px;
+}
+.joba-title2 li{
+  list-style:none;
+}
+.joba-title3{
+  margin-left:10%;
+   line-height:50px;
+}
+.joba-title3 li{
+  list-style:none;
+}
+.icon-one{
+  margin-top:40px;
+}
+.link{
+  padding-left:20px;
+}
+/* ==================== Desktop default ==================== */
+/* No changes needed – your current styles are fine for PC */
+
+/* ==================== Mobile Responsive ==================== */
+@media screen and (max-width: 768px) {
+  .logo {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo1 {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+
+  .nav ul {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+    margin-top: 10px;
+    gap: 10px;
+  }
+
+  .title {
+    flex-direction: column;
+    width: 100%;
+    margin: 20px auto;
+  }
+
+  .title-one, .title-two {
+    width: 100%;
+    text-align: center;
+  }
+
+  .product {
+    width: 100%;
+  }
+
+  .product-card {
+    justify-content: center;
+  }
+
+  .plants {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+
+  .flower, .true {
+    width: 100%;
+    height: auto;
+    left: 0;
+  }
+
+  .Lover {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .imeg-pera {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .imeg-box1, .imeg-box2 {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .bloom, .deal, .zab {
+    width: 100%;
+    height: auto;
+  }
+
+  .overlay-content {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .overlay-content h6 {
+    font-size: 30px;
+    padding-left: 0;
+    padding-top: 40px;
+  }
+
+  .overlay-content input {
+    width: 80%;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .overlay-content button {
+    width: 60%;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .pera-sesh {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    height: auto;
+  }
+
+  .joba, .joba-title2, .joba-title3 {
+    margin: 20px 0;
+  }
+
+  .icon-one {
+    margin-top: 20px;
+  }
+
+  .link {
+    padding: 10px;
+  }
+}
 
 </style>
 <body>
@@ -382,7 +536,38 @@ Shop Now</h3>
     <button>Subscribe</button>
   </div>
 </div>
+<div class="pera-sesh">
+  <div class="joba"><img class="" src="../Rohan-2025/assets/logo.png" alt=""> <p class="joba-title">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>  </div>
+  <div class="joba-title2">
+    <ul>
+         <li><a class="one" href="">Home</a></li>
+          <li><a class="two" href="">About Us</a></li>
+           <li><a class="three" href="">Blog</a></li>
+            <li> <a class="four" href="">Blog</a></li>
+            <li> <a class="four" href="">Contact Us</a></li>
 
+      </ul>
+  </div>
+  <div class="joba-title3">
+<ul>
+  
+         <li><a class="one" href="">Features</a></li>
+          <li><a class="two" href="">Pricing</a></li>
+           <li><a class="three" href="">Privacy Policy</a></li>
+            <li> <a class="four" href="">Terms of Service</a></li>
+            <li><a class="five" href="">Help Center</a> </li>
+</ul>
+
+  </div>
+
+      <div class="icon-one">
+<a href=""><img  class="link" src="../Rohan-2025/assets/icon-linkedin.png" alt=""></a>
+<a href=""><img  class="link" src="../Rohan-2025/assets/icon-twitter.png" alt=""></a>
+<a href=""><img  class="link" src="../Rohan-2025/assets/icon-facebook.png" alt=""></a>
+<a href=""><img  class="link" src="../Rohan-2025/assets/icon-youtube.png" alt=""></a>
+      </div>
+  
+</div>
 
 
 </nevbar>
