added head title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASSISTANT</title>
+    <title>fail</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <style>
@@ -153,11 +153,11 @@
   }
   .image-container {
   position: relative;
-  /* optionally define size or width */
-  display: inline-block; /* shrink-wrap to images */
+  
+  display: inline-block;
 }
   .flower {
-  display: block; /* or inline-block */
+  display: block; 
   position: relative;
   z-index: 1;
 }
@@ -241,7 +241,7 @@ hr{
   
   margin: auto;
   position: relative;
-  width: fit-content; /* or a specific width */
+  width: fit-content; 
 }
 
 .news {
@@ -256,7 +256,7 @@ hr{
   top: 0;
   left: 0;
   padding: 20px;
-  color: white; /* Change as needed */
+  color: white; 
 }
 
 .overlay-content h6 {
@@ -317,10 +317,7 @@ hr{
 .link{
   padding-left:20px;
 }
-/* ==================== Desktop default ==================== */
-/* No changes needed – your current styles are fine for PC */
 
-/* ==================== Mobile Responsive ==================== */
 @media screen and (max-width: 768px) {
   .logo {
     flex-direction: column;
