--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ gap:30px;
 
   </style>
 </head>
-<body>
+
   <div class="product-list">
     <div class="product-title">
       <h1 class="Our">Our <span class="plants">plants</span></h1>
@@ -173,8 +173,7 @@ gap:30px;
 <div class="product-cart"><img class="Rohan" src="../Rohan-2025/assets/sample-flower-image.png" alt=""> <p class="name">Lily Blossom<br> <span>20 USD</span> </p> <button>ADD TO CART</button> </div>
    </div>
   </div>
- 
-<div class="img-box">
+ <!--<div class="img-box">
   <div class="boxtwo"> 
      <div class="img1">
       <img class="deal" src="../Rohan-2025/assets/deal-ana.png" alt="">
@@ -188,6 +187,7 @@ gap:30px;
   <img class="deal3" src="../Rohan-2025/assets/deal-zabo.png" alt=""></div>
   <div class="up">robiul is king master</div>
 </div>
+-->
 
 
 
