--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ input[type ="text"]{
       border:5px solid red;
     }
 /*phone size */
-  @media  screen and (max-width:380px) {
+  @media  screen and (max-width:300px) {
     
 .product{
    width:155px;
@@ -403,6 +403,21 @@ input[type ="text"]{
  color:#ddd;
      font-size:26px;
     }
+    button{
+      background: #ff555d;
+      width:120px;
+      height:50px;
+      list-style: none;
+      font-size:18px;
+      border:none;
+      border-radius:10px;
+    }
+   #detail-image{
+     width:300px;
+     height:350px;
+   }
+
+
   </style>
 </head>
 
