--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@ gap:30px;
 }
 input[type ="text"]{
  width:400px;
-  height:30px;
+  height:40px;
   font-size:18px;
+  border-radius:7px;
 }
 
     .product-list {
@@ -246,7 +247,7 @@ input[type ="text"]{
     }
     .product {
       
-      width: 200px;
+      width: 160px;
       border: 1px solid #ddd;
       border-radius: 8px;
       overflow: hidden;
@@ -286,7 +287,7 @@ input[type ="text"]{
     
 .product{
    width:155px;
-   gap:0px;
+   gap:20px;
 }
 /*.box{
   flex-direction: column;
@@ -297,9 +298,6 @@ flex-direction: column;
 }*/
 input[type ="text"]{
  width:90%;
-}
-.product-details{
- 
 }
 
  .box {
