--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ gap:30px;
   text-align: center;
 }
 input[type ="text"]{
- width:400px;
+ width:350px;
   height:40px;
   font-size:18px;
   border-radius:7px;
@@ -283,33 +283,12 @@ input[type ="text"]{
       border:5px solid red;
     }
 /*phone size */
-  @media  screen and (max-width:300px) {
-    
-.product{
-   width:155px;
-   gap:20px;
-}
-/*.box{
-  flex-direction: column;
-  max-width:90%;
- display: flex;
-flex-wrap: wrap;
-flex-direction: column;
-}*/
-input[type ="text"]{
- width:90%;
+ @media screen and (max-width: 600px) {
+    .name {
+        color: red;
+    }
 }
 
- .box {
-    display: flex;
-    flex-direction: column; /* একটার পর একটা নামবে */
-    align-items: center;    /* মাঝখানে সাজাবে */
-    gap: 15px;
-  }
-
-
-
-  }
     /* Fullscreen popup styles */
     .product-details {
        
