--- a/index.html
+++ b/index.html
@@ -409,13 +409,16 @@ input[type ="text"]{
 
 <!--prduct-list-->
   <div class="product-list">
-    <div class="product" onclick="showDetails('product1')"><img src="paper.jpg" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
+    
+    <div class="product" onclick="showDetails('product1')"><img src="alaudin.png" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
     <div class="product" onclick="showDetails('product2')"><img src="flower.jpg" alt="পাঞ্জাবি ২"><h3>flower</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <!-- আরও প্রোডাক্ট এখানে যোগ করতে পারেন -->
      <div class="product" onclick="showDetails('product3')"><img src="city.jpg" alt="পাঞ্জাবি ২"><h3>city</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product4')"><img src="tree.jpg" alt="পাঞ্জাবি ২"><h3>tree</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product5')"><img src="man.jpg" alt="পাঞ্জাবি ২"><h3>man</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product6')"><img src="car.jpg" alt="পাঞ্জাবি ২"><h3>car</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
+     <div class="product" onclick="showDetails('product7')"><img src="paper.jpg" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
+      <div class="product" onclick="showDetails('product7')"><img src="shart.png" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
   </div>
 <!--BACK BUTTON-->
   <div id="product-details" class="product-details">
@@ -440,12 +443,12 @@ Follow Us
           <a href=""><i class="fa-brands fa-twitter"></i> </a>
           <a href=""><i class="fa-brands fa-square-instagram"></i></a>
           </h3> </div>
-  <div class="box-2 color"><h3>Contact Us
+  <div class="box-2 color"><h3>Contact Us<br>
 
-House #8, Road # 14,
-Dhanmondi, Dhaka-1209.
+Number: 01319992654,
 
-Email: support@e-valy.com</h3> </div>
+
+Email:robiul28380@gmail.com</h3> </div>
   <div class="box-3 color"><h3>Let Us Help You
 
     Your Account
@@ -459,8 +462,8 @@ Email: support@e-valy.com</h3> </div>
   <script>
     const products = {
       product1: {
-        name: 'paper ',
-        image: 'paper.jpg',
+        name: 'MaMA',
+        image: 'alaudin.png',
         price: '৳1,200',
         color: ':blue,red,black',
         
@@ -496,8 +499,8 @@ Email: support@e-valy.com</h3> </div>
         color: 'নীল'
       },
         product7: {
-        name: 'পাঞ্জাবি 7',
-        image: 'ti shart.jpg',
+        name: 'shart',
+        image: 'shart.png',
         price: '৳১,৫০০',
         color: 'নীল'
       },
