--- a/index.html
+++ b/index.html
@@ -410,15 +410,15 @@ input[type ="text"]{
 <!--prduct-list-->
   <div class="product-list">
     
-    <div class="product" onclick="showDetails('product1')"><img src="alaudin.png" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
+    <div class="product" onclick="showDetails('product1')"><img src="alaudin.png" alt="পাঞ্জাবি ১"><h3>Mama</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
     <div class="product" onclick="showDetails('product2')"><img src="flower.jpg" alt="পাঞ্জাবি ২"><h3>flower</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <!-- আরও প্রোডাক্ট এখানে যোগ করতে পারেন -->
      <div class="product" onclick="showDetails('product3')"><img src="city.jpg" alt="পাঞ্জাবি ২"><h3>city</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product4')"><img src="tree.jpg" alt="পাঞ্জাবি ২"><h3>tree</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product5')"><img src="man.jpg" alt="পাঞ্জাবি ২"><h3>man</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
     <div class="product" onclick="showDetails('product6')"><img src="car.jpg" alt="পাঞ্জাবি ২"><h3>car</h3><p>Price:১,৫০০<span class="delet"><del>1,300</del></span></p></div>
-     <div class="product" onclick="showDetails('product7')"><img src="paper.jpg" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
-      <div class="product" onclick="showDetails('product7')"><img src="shart.png" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
+     <div class="product" onclick="showDetails('product7')"><img src="vai.png" alt="পাঞ্জাবি ১"><h3>Sir</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
+      <div class="product" onclick="showDetails('product8')"><img src="shart.png" alt="পাঞ্জাবি ১"><h3>paper</h3><p>Price:1,200<span class="delet"><del>1,300</del></span> </p></div>
   </div>
 <!--BACK BUTTON-->
   <div id="product-details" class="product-details">
@@ -499,14 +499,14 @@ Email:robiul28380@gmail.com</h3> </div>
         color: 'নীল'
       },
         product7: {
-        name: 'shart',
-        image: 'shart.png',
+        name: 'Sir',
+        image: 'vai.png',
         price: '৳১,৫০০',
         color: 'নীল'
       },
         product8: {
-        name: 'পাঞ্জাবি ২',
-        image: 'bike.jpg',
+        name: 'shart',
+        image: 'shart.png',
         price: '৳১,৫০০',
         color: 'নীল'
        },
